Fixed close button alignment in notfications Fixed tapped green active state in community comment icon

--- a/client/sass/utils/helpers/_visual.scss
+++ b/client/sass/utils/helpers/_visual.scss
@@ -45,7 +45,7 @@
 
     line-height: 3.6rem !important;
     &.active-state {
-      background: rgba(81, 200, 172, 0.5) !important;
+      background: rgba(81, 200, 172, 0.0) !important;
     }
   }
 }
